# Nabzram

./: .gitignore  README.md  build.py  dev.py  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: build-release.yml
app/database/: __init__.py  tinydb_manager.py
app/gui/: __init__.py  ops_api.py  window_api.py
app/models/: database.py  schemas.py
app/ops/: __init__.py  appearance.py  logs.py  servers.py  settings.py  subscriptions.py  system.py  updates.py  utils.py
app/services/: process_service.py  subscription_service.py  xray_update_service.py
docs/: API.md
ui/: App.tsx  index.html  index.tsx  metadata.json  types.ts
ui/components/: ImportConfirmModal.tsx  InstallationRequired.tsx  LogStreamModal.tsx  SettingsModal.tsx  StatusIndicator.tsx  SubscriptionList.tsx  UpdateModal.tsx
ui/contexts/: ThemeContext.tsx
ui/services/: api.ts
