[project]
name = "Nabzram"
version = "25.10.0102"
description = "A Marzban client tool for connecting to Marzban subscriptions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "bottle==0.13.4",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "idna==3.10",
    "nuitka>=2.7.16",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "proxy-tools==0.1.0",
    "pycairo==1.28.0 ; sys_platform == 'linux'",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pygobject==3.50.0 ; sys_platform == 'linux'",
    "pygobject-stubs==2.13.0 ; sys_platform == 'linux'",
    "pystray==0.19.5",
    "python-decouple==3.8",
    "python-xlib==0.33",
    "pywebview==6.0",
    "requests==2.32.5",
    "six==1.17.0",
    "tinydb==4.8.2",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
respect-gitignore = true

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
